feat: Enhance report teleport command and update related configurations